--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,6 @@
   <script src="public/js/script.js" defer></script>
 </head>
 <body>
-  <div id="root">content</div>
-  <img src="public/images/102.jpg" alt="cat">
+  <div id="root"></div>
 </body>
 </html>
