--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="public/css/style.css">
   <script src="public/js/script.js" defer></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
